fix: prevent PUP logo from being squished on mobile navbar

--- a/issc/main/static/css/styles.css
+++ b/issc/main/static/css/styles.css
@@ -47,9 +47,14 @@ body {
     animation: slideDownFade .6s ease-out forwards;
 }
 
+.navbar-logo {
+    flex-shrink: 0;
+}
+
 .navbar-logo img {
     width: 60px;
     height: 60px;
+    object-fit: contain;
     animation: fadeIn 0.6s ease-in-out forwards;
 }
 
@@ -375,6 +380,7 @@ footer .copyright {
     .navbar-logo img {
         width: 50px;
         height: 50px;
+        object-fit: contain;
     }
 
     .pup {
@@ -545,6 +551,7 @@ footer .copyright {
     .navbar-logo img {
         width: 40px;
         height: 40px;
+        object-fit: contain;
     }
 
     .pup {
